syntax = "proto3";

package UIproto;

service UI {
    rpc Ping(PingRequest) returns (PingResponse);
    rpc SchemaTest(SchemaFile) returns (SchemaResponse);
    rpc Plugin(PluginRequest) returns (PluginResponse);
    rpc Report(ReportRequest) returns (stream ReportResponse);
}

message ReportRequest {
    Server server = 1;
    ServerDB serverDB = 2;
    ClientDB clientDB = 3;
    bool dollar = 4;
    bytes flock = 5;
    bytes params = 6;
    bytes plugin = 7;
}

message ReportResponse {
    int64 chunks = 1;
    int64 tables = 2;
    int64 percentage = 3;
}

message PingRequest {
    oneof value {
        Server server = 1;
        ClientDB clientDB = 2;
        ServerDB serverDB = 3;
    }
}

message PingResponse {
    bytes schema = 1;
}

message SchemaFile {
    bytes file = 1;
}

message SchemaResponse {
    repeated string params = 2;
}

message PluginRequest {
    Server server = 1;
    bytes plugin = 2;
}

message PluginResponse {
}

message Server {
    string ip = 1;
}

message ClientDB {
    string url = 1;
    string database = 2;
}

message ServerDB {
    Server server = 1;
    string url = 2;
    string database = 3;
}

